--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 docs= D:/Brais/Clase/3º Carreira/RI/ficheiros
 partialIndexes= D:/Brais/Clase/3º Carreira/RI/parciales
-onlyFiles= .java .c .txt .odt .doc .pdf
+onlyFiles= .java .c .odt .doc .pdf .txt
 onlyTopLines=5
 onlyBottomLines=2
