--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,3 @@
 docs= D:/Brais/Clase/3º Carreira/RI/ficheiros
 partialIndexes= D:/Brais/Clase/3º Carreira/RI/parciales
-onlyFiles= .java .c .odt .doc .pdf .txt
-onlyTopLines=5
-onlyBottomLines=2
+onlyFiles=.txt
