--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,3 @@
-docs= D:/Brais/Clase/3º Carreira/RI/ficheiros
-partialIndexes= D:/Brais/Clase/3º Carreira/RI/parciales
+docs= D:/Universidad/Tercer Año/Segundo Cuatrimestre/RI/ficheros
+partialIndexes= D:/Universidad/Tercer Año/Segundo Cuatrimestre/RI/parciales
 onlyFiles=.txt
